# drift-scout

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: baseline.yaml
docs/: ARCHITECTURE.md  OPERATIONS.md
docs/examples/: web.json
src/drift_scout/: __init__.py  cli.py  config.py  inventory.py  reporter.py  scanner.py  scheduler.py  state.py
src/drift_scout/integrations/: slack.py
tests/: test_config.py  test_inventory.py  test_reporter.py  test_scanner.py  test_scheduler.py
